# hdltree

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/images/: demo_device.vhdl
examples/: example.py
hdlparse/: __main__.py  vhdl_parser.py
hdltree/: Analyzer.py  Parser.py  Parsers.py  VhdlAstTransformer.py  VhdlCstTransformer.py  VhdlParseTreeTransformers.py  __main__.py  cli.py  hdltree.py  symbol.py  vhdl-2008.lark
hdltree/ieee2008/: README
hdltree/std/: README  standard.vhdl
hdltree/tests/vhdl_2008/: README
symbolator/: symbolator.py
