[project]
name = "hdltree"
version = "0.3.2"
authors = [{ name = "Rajan Patel", email = "rpatel3001@gmail.com" }]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
keywords = ["RTL", "HDL", "VHDL", "System", "Verilog", "SystemVerilog", "symbol", "symbolator", "sphinx", "hdlparse", "parse", "format", "validate"]
license = { file = "LICENSE" }
description = "Pure Python HDL parser, plus symbol generator and sphinx domain"
requires-python = ">=3.10"
dependencies =[
    "lark>=1.0.0",
    "lark-ambig-tools>=1.0.0",
    "rich>=13.0.0",
    "pydot>=3.0.0",
]

[project.optional-dependencies]
regex = ["regex"]
symbolator = ["pygobject", "pycairo"]

[project.urls]
source = "https://github.com/rpatel3001/hdltree"

[project.scripts]
symbolator = "symbolator.__main__:main"
hdlparse = "hdlparse.__main__:main"
hdltree = "hdltree.__main__:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "nucanvas",
    "nucanvas.color",
    "symbolator_sphinx",
    "hdltree",
    "hdlparse",
    "symbolator"
]
